# PLTOffline

./: .gitignore  BuildFile  CalibrationList.txt  DetectFailure  DoubleColumnMC  EOFAnalyzer.cc  GKCalibrationList.txt  GKCalibrationList_Telescope2.txt  GKCalibrationList_Telescope5.txt  GKCalibrationList_Telescope6.txt  Make.tests  MakeClusterLumiPlots.C  MakeNiceOccupancy.C  Makefile  Makefile-brildev  Makefile_analysis  Makefile_ubuntu  Mask_2016_VdM_v1.txt  OccupancyVsTime  PLT-EndOfFill.sh  PLT-timestamps.txt  ParseCondDBDataChannels  PlotActiveBunches  README.md  ROC_Efficiency  RecenterMask.C  TrackLumiZeroCountingBXVdM  TrackLumiZeroCountingVdM  TrackMC  checkOfflineMaskSize.pl  checkOnlineMaskSize.pl  grantest.txt  hotPixelMask.txt  outerPixelMask.txt  outerPixelMask_Telescope1.txt  outerPixelMask_Telescope2.txt  outerPixelMask_Telescope6.txt  outerPixelMask_forSiEff.txt  pltTimestamps.csv  rootSetup.csh  (+13 more)
ALIGNMENT/: README
AnomalySearches/: README.md
AnomalySearches/plt-anomaly-detector/: Pipfile  README.md  mkdocs.yml  pyproject.toml  setup.py  setup.sh
AnomalySearches/plt-anomaly-detector/PltAnomalyDetector.egg-info/: PKG-INFO
AnomalySearches/plt-anomaly-detector/docs/: API.md  index.md  install.md  quickstart.md
AnomalySearches/plt-anomaly-detector/examples/: create_mount.ipynb  detection.ipynb
AnomalySearches/plt-anomaly-detector/scripts/: mount_fills.py
AnomalySearches/plt-anomaly-detector/site/: 404.html  index.html  search.html
AnomalySearches/plt-anomaly-detector/site/API/: index.html
AnomalySearches/plt-anomaly-detector/src/: analyze.py
(+1451 files in other folders)
